Result of a full replace of branch Reg_KMB_Xfire